trunk/Archive2/30/b3610dfdd21c94/output
main.cpp: In function 'int main()':
main.cpp:44:7: error: use of deleted function 'foo& foo::operator=(const foo&)'
     a = b;
       ^
main.cpp:4:7: note: declared here
    T& operator=(T const&) = delete
       ^
main.cpp:37:5: note: in expansion of macro 'CLASS_NON_COPYABLE'
     CLASS_NON_COPYABLE(foo);
     ^
